Fixed menu issues and added support for blocked work samples on mobile

--- a/public/a/c/_general.scss
+++ b/public/a/c/_general.scss
@@ -92,6 +92,16 @@ $maxMainWidth: $max-main-width;
 
 .color-test { height: 100px; width: 100px; float: left; margin: 0 40px 40px 0; }
 
+@media (max-width: 768px) {
+	.grid-block{
+		display: block;
+		width: 100% !important;
+		text-align: center;
+	}
+	
+}
+
+
 /*-------------------------------------------
  
     	Typography
