--- a/public/a/c/screen.css
+++ b/public/a/c/screen.css
@@ -247,6 +247,11 @@ a.line {
   float: left;
   margin: 0 40px 40px 0; }
 
+@media (max-width: 768px) {
+  .grid-block {
+    display: block;
+    width: 100% !important;
+    text-align: center; } }
 /*-------------------------------------------
  
     	Typography
@@ -1147,7 +1152,7 @@ header {
     background: url(../i/collapsed-nav-keystone.png) no-repeat 0 4px;
     padding-left: 30px; }
 
-@media (max-width: 400px) {
+@media (max-width: 768px) {
   header {
     display: none;
     position: fixed;
